Little milestones page update

--- a/example_project/templates/base.html
+++ b/example_project/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "richtemplates/base.html" %}
 
-{% block title %}Richtemplates - simple profile{% endblock %}
+{% block title %}django-projector - example project{% endblock %}
 {% block top %}
     {% comment %}You may specify your logo here{% endcomment %}
     {#<img id="top_logo" src="{{ MEDIA_URL }}img/logo.png"/>#}
