--- a/projector/templates/projector/accounts/profile.html
+++ b/projector/templates/projector/accounts/profile.html
@@ -56,7 +56,7 @@
                         </tr>
                     </thead>
                     <tbody class="datatable-tbody">
-                        {% for project in profile.user.project_set.all %}
+                        {% for project in project_list %}
                         <tr class="{% cycle "odd" "even" %} hoverable">
                             <td><a class="block-link" href="{{ project.get_absolute_url }}">{{ project.name }}</a></td>
                             <td>{{ project.category|default:"-" }}</td>
