--- a/projector/templates/projector/task/details.html
+++ b/projector/templates/projector/task/details.html
@@ -97,7 +97,7 @@
                                 <img src="{{ MEDIA_URL }}richtemplates/img/icons/icon-no.gif" />
                             {% endif %}
                         {% else %}
-                            Not set
+                            {% trans "Not set" %}
                         {% endif %}
                     </td>
                 </tr>
