Templates updates for pygments styles support from richtemplates

--- a/projector/templates/projector/project/repository/diff.html
+++ b/projector/templates/projector/project/repository/diff.html
@@ -10,7 +10,7 @@
 {% block browse_content %}
 {% if diff_content %}
     <div class="codeblock">
-        {% highlight diff_content diff linenos=true anchorlinenos=true lineanchors=line cssclass="code-highlight" %}
+        {% highlight diff_content udiff linenos=true anchorlinenos=true lineanchors=line cssclass="code-highlight" %}
     </div>
 {% else %}
     <ul class="messages">
