Permissions forms and management cleanup

--- a/projector/templates/projector/settings.html
+++ b/projector/templates/projector/settings.html
@@ -1,6 +1,8 @@
 {% extends "projector/home.html" %}
 
-{% load config_tags %}
+{% block extra_head %}{{ block.super }}
+    {{ form.media }}
+{% endblock %}
 
 {% block col_left %}{% endblock %}
 
