--- a/projector/templates/projector/project/members/edit.html
+++ b/projector/templates/projector/project/members/edit.html
@@ -11,9 +11,9 @@
 {% block col_main_extra %}
 
 <div class="richtemplates-panel">
-    <h5>{% trans "Project's team" %}</h5>
+    <h5>{% trans "Project's member" %}</h5>
     <div class="richtemplates-panel-content">
-    <h1>{% trans "Manage team" %} {{ membership.member }}</h1>
+    <h1>{% trans "Manage member" %} {{ membership.member }}</h1>
     
     {% if project.is_public %}
         <ul class="messages">
@@ -25,9 +25,7 @@
     {% endif %}
 
     <ul class="nav-inline">
-        {% ifhasperm "project_permission.add_team_project" request.user project %}
-        <li><a class="button-link" href="{{ project.get_teams_add_url }}">{% trans "Add new team" %}</a></li>
-        {% endifhasperm %}
+        <li><a class="button-link" href="{{ project.get_members_add_url }}">{% trans "Add new member" %}</a></li>
     </ul>
 
     <form id="id_form_perms" action="." method="post">
@@ -39,8 +37,9 @@
             <input type="submit" name="Update" class="richbutton" />
         </p>
     </form>
-    </div>
 
+    </div>
 </div>
 {% endblock %}
+
 
