--- a/projector/templates/projector/project/task_list.html
+++ b/projector/templates/projector/project/task_list.html
@@ -33,7 +33,7 @@
     <div class="richtemplates-panel-content">
     <h2>{% trans "Task List" %}</h2>
     <ul class="nav-inline">
-        <li><a class="button-link" href="{{ project.get_create_task_url }}">{% trans "Create new task" %}</a></li>
+        <li><a class="richbutton" href="{{ project.get_create_task_url }}">{% trans "Create new task" %}</a></li>
     </ul>
     {% if invalid_page %}
         <div class="messages">
