--- a/projector/templates/projector/project/workflow/detail.html
+++ b/projector/templates/projector/project/workflow/detail.html
@@ -10,12 +10,17 @@
 <div class="richtemplates-panel">    
     <h5>{% trans "Workflow schema" %}</h5>
     <div class="richtemplates-panel-content">
+        {% block workflow_menu %}
         <ul class="nav-inline">
-        {% ifhasperm "project_permission.change_project" request.user project %}
-            <li><a class="button-link" href="{{ project.get_workflow_edit_url }}">{% trans "Edit" %}</a></li>
-            <li><a class="button-link" href="{{ project.get_workflow_add_status_url }}">{% trans "Add status" %}</a></li>
-        {% endifhasperm %}
+            <li class="richbuttonset">
+                <a  class="button-link"href="{{ project.get_workflow_url }}">{% trans "Workflow" %}</a>
+                {% ifhasperm "project_permission.change_project" request.user project %}
+                <a  class="button-link"href="{{ project.get_workflow_edit_url }}">{% trans "Edit" %}</a>
+                <a  class="button-link"href="{{ project.get_workflow_add_status_url }}">{% trans "Add status" %}</a>
+                {% endifhasperm %}
+            </li>
         </ul>
+        {% endblock %}
 
         <div class="richblock">
             <ul>
