--- a/projector/templates/projector/project/component_list.html
+++ b/projector/templates/projector/project/component_list.html
@@ -11,7 +11,7 @@
     <div class="richtemplates-panel-content">
     <ul class="nav-inline">
         {% ifhasperm "project_permission.change_project" request.user project %}
-        <li><a class="button-link" href="{{ project.get_component_add_url }}">{% trans "Add component" %}</a></li>
+        <li><a class="richbutton" href="{{ project.get_component_add_url }}">{% trans "Add component" %}</a></li>
         {% endifhasperm %}        
     </ul>    
 
