--- a/projector/templates/projector/project/members/add.html
+++ b/projector/templates/projector/project/members/add.html
@@ -14,6 +14,7 @@
 <div class="richtemplates-panel">
     <h5>{% trans "Add member" %}</h5>
     <div class="richtemplates-panel-content">
+        {% block members_menu %}{{ block.super }}{% endblock %}
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
