--- a/projector/templates/projector/project/members/edit.html
+++ b/projector/templates/projector/project/members/edit.html
@@ -1,4 +1,4 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/members/home.html" %}
 
 {% load i18n %}
 {% load permissions %}
@@ -11,10 +11,9 @@
 {% block col_main_extra %}
 
 <div class="richtemplates-panel">
-    <h5>{% trans "Project's member" %}</h5>
+    <h5>{% trans "Project's member" %}: {{ membership.member }}</h5>
     <div class="richtemplates-panel-content">
-    <h1>{% trans "Manage member" %} {{ membership.member }}</h1>
-    
+    {% block members_menu %}{{ block.super }}{% endblock %}
     {% if project.is_public %}
         <ul class="messages">
             <li class="message message-info">
@@ -23,10 +22,6 @@
             </li>
         </ul>
     {% endif %}
-
-    <ul class="nav-inline">
-        <li><a class="button-link" href="{{ project.get_members_add_url }}">{% trans "Add new member" %}</a></li>
-    </ul>
 
     <form id="id_form_perms" action="." method="post">
         {% csrf_token %}
