--- a/projector/templates/projector/project/members/home.html
+++ b/projector/templates/projector/project/members/home.html
@@ -13,14 +13,16 @@
 <div class="richtemplates-panel">
     <h5>{% trans "Project's members" %}</h5>
     <div class="richtemplates-panel-content">
-        {# Task list: {{ task_list }} #}
-    <h1>{{ project.name }}</h1>
-    <h2>{% trans "Members" %}</h2>
+    {% block members_menu %}
     <ul class="nav-inline">
-        {% ifhasperm "project_permission.add_member_project" request.user project %}
-        <li><a class="button-link" href="{{ project.get_members_add_url }}">{% trans "Add new member" %}</a></li>
-        {% endifhasperm %}
+        <li class="richbuttonset">
+            <a  class="button-link"href="{{ project.get_members_url }}">{% trans "Members" %}</a>
+            {% ifhasperm "project_permission.add_member_project" request.user project %}
+            <a  class="button-link"href="{{ project.get_members_add_url }}">{% trans "Add new member" %}</a>
+            {% endifhasperm %}
+        </li>
     </ul>
+    {% endblock %}
     <table class="datatable">
         <thead class="datatable-thead">
             <tr class="datatable-thead-subheader">
