--- a/projector/templates/projector/project/milestones/add.html
+++ b/projector/templates/projector/project/milestones/add.html
@@ -1,13 +1,22 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/milestones/home.html" %}
 
 {% load i18n %}
 {% load pagination_tags %}
 {% load sorting_tags %}
 
+{% block extra_head %}{{ block.super }}
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#id_name').slugify('#id_slug');
+        });
+    </script>
+{% endblock %}
+
 {% block col_main_extra %}
 <div class="richtemplates-panel">
-    <h5>{% trans "Add status" %}</h5>
+    <h5>{% trans "Project's milestones" %}</h5>
     <div class="richtemplates-panel-content">
+        {% block milestones_menu %}{{ block.super }}{% endblock %}
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
@@ -15,9 +24,9 @@
             </table>
             <div>
                 <input id="id_submit" type="submit" name="submit"
-                    value="{% trans "Create status" %}"/>
+                    value="{% trans "Create milestone" %}"/>
                 <input type="button" onclick="window.location='{% spaceless %}
-                    {{ project.get_workflow_url }}
+                    {% url projector_project_milestones project.slug %}
                     {% endspaceless %}'" value="{% trans "Cancel" %}"/>
             </div>
         </form>
