--- a/projector/templates/projector/project/milestones/detail.html
+++ b/projector/templates/projector/project/milestones/detail.html
@@ -1,4 +1,4 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/milestones/home.html" %}
 
 {% load markup %}
 {% load i18n %}
@@ -10,13 +10,8 @@
 <div class="richtemplates-panel">    
     <h5>{% trans "Milestone detail" %}</h5>
     <div class="richtemplates-panel-content">
-        <ul class="nav-inline">
-            <li><a class="button-link" href="{{ project.get_milestones_url }}">{% trans "Back to list" %}</a></li>
-            {% ifhasperm "project_permission.change_project" request.user project %}
-            <li><a class="button-link" href="{{ milestone.get_edit_url }}">{% trans "Edit" %}</a></li>
-            {% endifhasperm %}
-            <li><a class="button-link" href="{{ milestone.get_tasks_url }}">{% trans "Show tasks" %}</a></li>
-        </ul>
+        {% block milestones_menu %}{{ block.super }}{% endblock %}
+
         <div class="richblock">
             <table class="richblock-properties">
                 <tbody>
@@ -36,7 +31,7 @@
             {{ milestone.description|restructuredtext }}
         </div>
 
-        {% include "projector/project/milestone_progress_table.html" %}
+        {% include "projector/project/milestones/progress_table.html" %}
 
     </div>
 </div>
