--- a/projector/templates/projector/project/milestones/edit.html
+++ b/projector/templates/projector/project/milestones/edit.html
@@ -1,21 +1,14 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/milestones/home.html" %}
 
 {% load i18n %}
 {% load pagination_tags %}
 {% load sorting_tags %}
 
-{% block extra_head %}{{ block.super }}
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('#id_name').slugify('#id_slug');
-        });
-    </script>
-{% endblock %}
-
 {% block col_main_extra %}
 <div class="richtemplates-panel">
-    <h5>{% trans "Add milestone" %}</h5>
+    <h5>{% trans "Edit milestone" %}: {{ form.instance }}</h5>
     <div class="richtemplates-panel-content">
+        {% block milestones_menu %}{{ block.super }}{% endblock %}
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
@@ -23,14 +16,15 @@
             </table>
             <div>
                 <input id="id_submit" type="submit" name="submit"
-                    value="{% trans "Create milestone" %}"/>
+                    value="{% trans "Update" %}"/>
                 <input type="button" onclick="window.location='{% spaceless %}
-                    {% url projector_project_milestones project.slug %}
+                    {{ form.instance.get_absolute_url }}
                     {% endspaceless %}'" value="{% trans "Cancel" %}"/>
             </div>
         </form>
     </div>
 </div>
 {% endblock %}
+
 
 
