--- a/projector/templates/projector/project/milestones/home.html
+++ b/projector/templates/projector/project/milestones/home.html
@@ -9,11 +9,19 @@
 <div class="richtemplates-panel">
     <h5>{% trans "Project's milestones" %}</h5>
     <div class="richtemplates-panel-content">
+    {% block milestones_menu %}
     <ul class="nav-inline">
-        {% ifhasperm "project_permission.change_project" request.user project %}
-        <li><a class="button-link" href="{{ project.get_milestones_add_url }}">{% trans "Add milestone" %}</a></li>
-        {% endifhasperm %}        
-    </ul>    
+        <li class="richbuttonset">
+            <a class="button-link" href="{{ project.get_milestones_url }}">{% trans "Milestones" %}</a>
+            {% ifhasperm "project_permission.change_project" request.user project %}
+            <a class="button-link" href="{{ project.get_milestones_add_url }}">{% trans "Add milestone" %}</a>
+            {% if milestone %}
+            <a class="button-link" href="{{ milestone.get_edit_url }}">{% trans "Edit" %}</a>
+            {% endif %}
+            {% endifhasperm %}
+        </li>
+    </ul>
+    {% endblock %}
 
     {% load pagination_tags %}
     {% load sorting_tags %}
@@ -48,7 +56,7 @@
                     </tr>
                 </tbody>
             </table>
-            {% include "projector/project/milestone_progress_table.html" %}
+            {% include "projector/project/milestones/progress_table.html" %}
         </div>
     {% endfor %}
 
