--- a/projector/templates/projector/project/teams/edit.html
+++ b/projector/templates/projector/project/teams/edit.html
@@ -1,4 +1,4 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/teams/home.html" %}
 
 {% load i18n %}
 {% load permissions %}
@@ -11,10 +11,11 @@
 {% block col_main_extra %}
 
 <div class="richtemplates-panel">
-    <h5>{% trans "Project's team" %}</h5>
+    <h5>{% trans "Project's team" %}: {{ team }}</h5>
     <div class="richtemplates-panel-content">
-    <h1>{% trans "Manage team" %} {{ membership.member }}</h1>
     
+    {% block teams_menu %}{{ block.super }}{% endblock %}
+
     {% if project.is_public %}
         <ul class="messages">
             <li class="message message-info">
@@ -23,12 +24,6 @@
             </li>
         </ul>
     {% endif %}
-
-    <ul class="nav-inline">
-        {% ifhasperm "project_permission.add_team_project" request.user project %}
-        <li><a class="button-link" href="{{ project.get_teams_add_url }}">{% trans "Add new team" %}</a></li>
-        {% endifhasperm %}
-    </ul>
 
     <form id="id_form_perms" action="." method="post">
         {% csrf_token %}
