--- a/projector/templates/projector/project/teams/home.html
+++ b/projector/templates/projector/project/teams/home.html
@@ -14,14 +14,16 @@
     <h5>{% trans "Projects' teams" %}</h5>
     <div class="richtemplates-panel-content">
 
-        <h1>{{ project.name }}</h1>
-        <h2>{% trans "Teams" %}</h2>
-
+        {% block teams_menu %}
         <ul class="nav-inline">
-            {% ifhasperm "project_permission.add_team_project" request.user project %}
-            <li><a class="button-link" href="{{ project.get_teams_add_url }}">{% trans "Add new team" %}</a></li>
-            {% endifhasperm %}
+            <li class="richbuttonset">
+                <a class="button-link" href="{{ project.get_teams_url }}">{% trans "Teams" %}</a>
+                {% ifhasperm "project_permission.add_team_project" request.user project %}
+                <a class="button-link" href="{{ project.get_teams_add_url }}">{% trans "Add new team" %}</a>
+                {% endifhasperm %}
+            </li>
         </ul>
+        {% endblock %}
         
         <table class="datatable">
             <thead class="datatable-thead">
