--- a/projector/templates/projector/project/workflow/add_status.html
+++ b/projector/templates/projector/project/workflow/add_status.html
@@ -1,4 +1,4 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/workflow/detail.html" %}
 
 {% load i18n %}
 {% load pagination_tags %}
@@ -6,8 +6,10 @@
 
 {% block col_main_extra %}
 <div class="richtemplates-panel">
-    <h5>{% trans "Edit milestone" %}: {{ form.instance }}</h5>
+    <h5>{% trans "Add status" %}</h5>
     <div class="richtemplates-panel-content">
+        {% block workflow_menu %}{{ block.super }}{% endblock %}
+
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
@@ -15,15 +17,14 @@
             </table>
             <div>
                 <input id="id_submit" type="submit" name="submit"
-                    value="{% trans "Update" %}"/>
+                    value="{% trans "Create status" %}"/>
                 <input type="button" onclick="window.location='{% spaceless %}
-                    {{ form.instance.get_absolute_url }}
+                    {{ project.get_workflow_url }}
                     {% endspaceless %}'" value="{% trans "Cancel" %}"/>
             </div>
         </form>
     </div>
 </div>
 {% endblock %}
-
 
 
