--- a/projector/templates/projector/project/teams/edit.html
+++ b/projector/templates/projector/project/teams/edit.html
@@ -31,7 +31,7 @@
             {% include "richtemplates/forms/form.html" %}
         </table>
         <p>
-            <input type="submit" name="Update" class="richbutton" />
+            <input type="submit" name="submit" class="richbutton" value="{% trans "Update" %}"/>
         </p>
     </form>
     </div>
