--- a/projector/templates/projector/project/components/add.html
+++ b/projector/templates/projector/project/components/add.html
@@ -1,4 +1,4 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/components/home.html" %}
 
 {% load i18n %}
 {% load pagination_tags %}
@@ -16,6 +16,7 @@
 <div class="richtemplates-panel">
     <h5>{% trans "Add component" %}</h5>
     <div class="richtemplates-panel-content">
+        {% block components_menu %}{{ block.super }}{% endblock %}
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
