--- a/projector/templates/projector/project/components/detail.html
+++ b/projector/templates/projector/project/components/detail.html
@@ -1,4 +1,4 @@
-{% extends "projector/project/details.html" %}
+{% extends "projector/project/components/home.html" %}
 
 {% load markup %}
 {% load i18n %}
@@ -10,12 +10,7 @@
 <div class="richtemplates-panel">    
     <h5>{% trans "Component detail" %}</h5>
     <div class="richtemplates-panel-content">
-        <ul class="nav-inline">
-            <li><a class="button-link" href="{{ project.get_components_url }}">{% trans "Back to list" %}</a></li>
-            {% ifhasperm "project_permission.change_project" request.user project %}
-            <li><a class="button-link" href="{{ component.get_edit_url }}">{% trans "Edit" %}</a></li>
-            {% endifhasperm %}
-        </ul>
+        {% block components_menu %}{{ block.super }}{% endblock %}
         <div class="richblock">
             <table class="richblock-properties">
                 <tbody>
