--- a/projector/templates/projector/project/components/home.html
+++ b/projector/templates/projector/project/components/home.html
@@ -9,11 +9,23 @@
 <div class="richtemplates-panel">
     <h5>{% trans "Project's components" %}</h5>
     <div class="richtemplates-panel-content">
+    {% block components_menu %}
     <ul class="nav-inline">
-        {% ifhasperm "project_permission.change_project" request.user project %}
-        <li><a class="richbutton" href="{{ project.get_component_add_url }}">{% trans "Add component" %}</a></li>
-        {% endifhasperm %}        
-    </ul>    
+        <li class="richbuttonset">
+            <a class="button-link" href="{{ project.get_components_url }}">{% trans "Components" %}</a>
+            {% ifhasperm "project_permission.change_project" request.user project %}
+            <a class="button-link" href="{{ project.get_component_add_url }}">{% trans "Add component" %}</a>
+            {% endifhasperm %}
+        </li>
+        <li>
+            {% ifhasperm "project_permission.change_project" request.user project %}
+            {% if component %}
+            <a class="button-link richbutton-wrench" href="{{ component.get_edit_url }}">{% trans "Edit" %}</a>
+            {% endif %}
+            {% endifhasperm %}
+        </li>
+    </ul>
+    {% endblock %}
 
     {% load pagination_tags %}
     {% load sorting_tags %}
