--- a/projector/templates/projector/project/repository/diff.html
+++ b/projector/templates/projector/project/repository/diff.html
@@ -16,7 +16,7 @@
 {% block browse_content %}
 {% if diff_content %}
     <div class="diffblock">
-        {{ differ.as_HTML|safe }}
+        {{ differ.as_html|safe }}
     </div>
 {% else %}
     <ul class="messages">
