--- a/projector/templates/projector/project/edit.html
+++ b/projector/templates/projector/project/edit.html
@@ -17,6 +17,7 @@
     <h5>{% trans "Project's edit panel" %}</h5>
     <div class="richtemplates-panel-content">
         <form action="." method="post">
+            {% csrf_token %}
             <table class="form-table">
                 {% include "richtemplates/forms/form.html" %}
             </table>
