--- a/projector/templates/projector/task/create.html
+++ b/projector/templates/projector/task/create.html
@@ -13,6 +13,7 @@
 {% block col_main_content %}
 {% if form %}
     <form action="." method="post">
+        {% csrf_token %}
         <table class="form-table">
             {% include "richtemplates/forms/form.html" %}
         </table>
