--- a/projector/templates/projector/task/details.html
+++ b/projector/templates/projector/task/details.html
@@ -1,6 +1,7 @@
 {% extends "projector/task/base.html" %}
 
 {% load markup %}
+{% load native %}
 
 {% block extra_head %}
     {{ block.super }}
@@ -36,8 +37,33 @@
     <h1>{% trans "Task" %} {{ task.id }}: {{ task.summary }}</h1>
     <h2>{{ task.status }} {% if not task.status.is_resolved %}({% trans "opened for" %} {{ task.created_at|timesince }}){% endif %}</h2>
     <ul class="nav-inline">
-        <li><a class="button-link" href="{{ task.project.get_task_list_url }}">{% trans "Return to task list" %}</a></li>
-        <li><a class="button-link" href="{{ task.get_edit_url }}">{% trans "Edit" %}</a></li>
+        <li class="richbuttonset">
+            <a class="button-link" href="{{ task.project.get_task_list_url }}">{% trans "Return to task list" %}</a>
+            <a class="button-link" href="{{ task.get_edit_url }}">{% trans "Edit" %}</a>
+        </li>
+        {% if user.is_authenticated %}
+        
+        <li class="richbuttonset" style="float: right">
+            
+            <form id="watch_form" method="post" action="{% spaceless %}
+                {% if not is_watched %}
+                    {{ task.get_watch_url }}
+                {% else %}
+                    {{ task.get_unwatch_url }}
+                {% endif %}{% endspaceless %}">
+
+                {% csrf_token %}
+                <input id="watch_form_submit" class="richbutton" type="submit" value="{% spaceless %}
+                    {% if not is_watched %}
+                    {% trans "Watch" %}
+                    {% else %}
+                    {% trans "Unwatch" %}
+                    {% endif %}{% endspaceless %}"
+                />
+            </form>
+
+        </li>
+        {% endif %}
     </ul>
 
     <div class="task-block">
@@ -94,7 +120,7 @@
                         {% if task.deadline %}
                             {{ task.deadline|date:"Y-m-d" }}
                             {% if now > task.deadline %}
-                                <img src="{{ MEDIA_URL }}richtemplates/img/icons/icon-no.gif" />
+                                <img src="{% richicon_src "icon-no.gif" %}" />
                             {% endif %}
                         {% else %}
                             {% trans "Not set" %}
@@ -144,9 +170,9 @@
                         {% for field, values in revision.changes.items %}
                         <li><strong>{{ field }}</strong>
                             {% if not values.1 %}
-                                set to
+                                {% trans "set to" %}
                             {% else %}
-                                changed from {{ values.1|slice:":20" }} to 
+                            {% trans "changed" %}: {{ values.1|slice:":20" }} &rarr;
                             {% endif %}
                             <strong>{{ values.0|slice:":20" }}</strong></li>
                         {% endfor %}
@@ -181,6 +207,7 @@
         {# Form begin #}
         {% if user.is_authenticated %}
         <form action="." method="post" class="action-form">
+        {% csrf_token %}
 
         <fieldset id="task-comment">
             <legend>{% trans "Quick action" %}</legend>
@@ -200,7 +227,6 @@
             </p>
         </fieldset>
         </form>
-        {# Form end #}
         {% else %}
         <p>
         {% trans "If you want to contribute, please" %}
